<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navi"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@drawable/round_rec_half"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:src="@drawable/img_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/bmjua"
                android:text="@string/tv_userName"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_userId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/tv_userId"
                android:textColor="#7D736C"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="6px"
        android:layout_marginHorizontal="5dp"
        android:layerType="software"
        android:src="@drawable/line_dotted" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="기타일정"
        android:textColor="#3B3838"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_showDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/bmjua"
            android:text="@string/tv_showDone"
            android:textColor="#B82C00"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_showFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/bmjua"
            android:text="@string/tv_showFriend"
            android:textColor="#B82C00"
            android:textSize="30sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="6px"
        android:layout_marginHorizontal="5dp"
        android:layerType="software"
        android:src="@drawable/line_dotted" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="계정"
        android:textColor="#3B3838"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_weight="0"
                android:fontFamily="@font/bmjua"
                android:text="@string/tv_security"
                android:textColor="#B82C00"
                android:textSize="30sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/sw_security"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:track="@drawable/switch_track"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_weight="0"
                android:fontFamily="@font/bmjua"
                android:text="@string/tv_sync"
                android:textColor="#B82C00"
                android:textSize="30sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/sw_sync"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:track="@drawable/switch_track"
                android:focusable="false"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_weight="0"
            android:fontFamily="@font/bmjua"
            android:text="@string/tv_logout"
            android:textColor="#B82C00"
            android:textSize="30sp" />
    </LinearLayout>


</LinearLayout>