<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textColor="#FA9F0B"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:singleLine="true"
            android:text="@string/tv_id"
            android:textColor="#BABABA"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:backgroundTint="#BABABA"/>

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:singleLine="true"
            android:text="@string/tv_pw"
            android:textColor="#BABABA"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:backgroundTint="#BABABA" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_rec_small"
        android:text="@string/btn_longin"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_findId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/tv_findId"
            android:textColor="#BABABA" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   |   "
            android:textColor="#BABABA" />

        <TextView
            android:id="@+id/tv_findPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/tv_findPassword"
            android:textColor="#BABABA" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   |   "
            android:textColor="#BABABA" />

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/tv_signUp"
            android:textColor="#BABABA" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_login" />

</androidx.constraintlayout.widget.ConstraintLayout>